Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -338,7 +338,7 @@
     "credit": "Kredit",
     "crm": "CRM",
     "cron-job": "Programmierte Arbeit",
-    "cron-timeout": "El cron se ha detenido para no superar el tiempo máximo de ejecución de PHP. Por favor, ejecuta el cron desde terminal para evitar este límite.",
+    "cron-timeout": "Der Cron wurde gestoppt, um die maximale PHP-Ausführungszeit nicht zu überschreiten. Bitte führen Sie den Cron über das Terminal aus, um dieses Limit zu vermeiden.",
     "crons": "Crons",
     "currency": "Währung",
     "currency-position": "Position Währungszeichen",
@@ -956,7 +956,7 @@
     "minimum-amount-without-cifnif": "Mindestbetrag ohne CIF\/NIF",
     "minimum-stock": "Mindestbestand",
     "minutes": "Minuten",
-    "mismatched-accounting-entry": "mismatched-accounting-entry",
+    "mismatched-accounting-entry": "Unstimmiger Buchungseintrag",
     "missing-data-epigraph-group": "Fehlende Daten in der Gruppenepigraph.",
     "missing-data-subaccount": "Daten fehlen im Unterkonto.",
     "missing-epigraph-data": "Daten fehlen im Epigraph.",
@@ -1040,7 +1040,7 @@
     "not-valid-percentage-retention": "Ungültiger Prozentsatz. Muss größer als 0,00 sein",
     "note": "Notiz",
     "notes": "Anmerkungen",
-    "notice": "Aviso",
+    "notice": "Hinweis",
     "notices": "Bemerkungen",
     "notification": "Benachrichtigung",
     "notifications": "Benachrichtigungen",
@@ -1065,7 +1065,7 @@
     "open": "öffnen",
     "open-exercise": "Übung öffnen",
     "open-tab": "Abrir en una nueva pestaña",
-    "opened": "Opened",
+    "opened": "Geöffnet",
     "opening-acounting-completed": "Buchhaltungseröffnung abgeschlossen",
     "opening-operation": "Öffnung",
     "operation": "Operation",
@@ -1104,7 +1104,7 @@
     "parent-group-cant-be-the-same-group": "Die übergeordnete Gruppe kann nicht dieselbe Gruppe sein",
     "parent-group-loop": "Die übergeordnete Gruppe %parentGroup% verursacht eine zirkuläre Beziehung.",
     "partnumber": "Artikelnummer",
-    "passenger": "Pasajero",
+    "passenger": "Passagier",
     "password": "Contraseña",
     "pattern": "Muster",
     "pattern-without-number": "Das gewählte Muster enthält keine Zahl, daher könnte es sein, dass duplikative Codes erzeugt werden.",
@@ -1263,7 +1263,7 @@
     "refunds": "Rückerstattungen",
     "register": "Registrieren",
     "register-install-ad": "Die Installation von FacturaScripts registrieren",
-    "register-install-ad-p": "Wenn Sie die Installation von FacturaScripts registrieren, erhalten Sie 1 Monat PRO-Sponsoring, mit dem Sie eines unserer exklusiven Plugins herunterladen können. Außerdem hilft es uns, Statistiken über Kern- und PHP-Versionen zu erstellen.",
+    "register-install-ad-p": "Wenn Sie die Installation von FacturaScripts registrieren, erhalten Sie einen Monat PRO-Sponsoring, mit dem Sie eines unserer exklusiven Plugins herunterladen können. Außerdem hilft es uns, Statistiken über Kern- und PHP-Versionen zu erstellen.",
     "register-installation": "Instalation registrieren",
     "register-installation-p": "Registrieren Sie Ihre Installation, um kostenpflichtige oder private Plugins aktualisieren zu können.",
     "register-symbol": "#",
@@ -1498,7 +1498,7 @@
     "tasks-personal-title": "Persönliche Aufgaben",
     "tax": "MwSt",
     "tax-area": "Steuerbereich",
-    "tax-areas": "tax-areas",
+    "tax-areas": "Steuerzonen",
     "tax-base": "Steuerbemessungsgrundlage",
     "tax-credit-account": "Steuergutschriftkonto",
     "tax-debit-account": "Steuerlastschriftkonto",
@@ -1519,7 +1519,7 @@
     "third-trimester": "Drittes Trimester",
     "this-last-fortnight": "Die letzten 15 Tage",
     "this-last-month": "diesen letzten Monat",
-    "this-last-week": "this-last-week",
+    "this-last-week": "Die letzten 7 Tage",
     "this-last-year": "das letzte Jahr",
     "this-month": "Diesen Monat",
     "this-week": "Diese Woche",
@@ -1534,7 +1534,7 @@
     "title-font-size": "Schriftgröße Titel",
     "title-url": "Titel (URL)",
     "to": "Bis",
-    "to-refund": "A devolver",
+    "to-refund": "Zurückgeben",
     "to-report": "Berichten",
     "today": "Heute",
     "total": "Gesamt",
@@ -1559,7 +1559,7 @@
     "try-again-later": "Versuchen Sie es später erneut",
     "tuesday": "Dienstag",
     "type": "Typ",
-    "type-alert": "Type alert",
+    "type-alert": "Typwarnung",
     "type-critical": "Kritischer Typ",
     "type-debug": "Debug-Typ",
     "type-emergency": "Notfalltyp",
@@ -1674,7 +1674,7 @@
     "you-cant-delete-primary-variant": "Sie können die Hauptvariante des Produkts nicht löschen",
     "you-sent-a-audio": "D",
     "you-sent-a-document": "Sie haben ein Dokument gesendet",
-    "you-sent-a-location": "Enviaste una ubicación",
+    "you-sent-a-location": "Sie haben einen Standort gesendet",
     "you-sent-a-picture": "Sie haben ein Bild gesendet",
     "you-sent-a-video": "Sie haben ein Video gesendet",
     "you-should-change-passwd": "Sie sollten Ihr Password ändern",
