--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -103,7 +103,7 @@
     "api-disabled": "API wyłączone. Możesz je włączyć w preferencjach aplikacji.",
     "api-key": "Klucz API",
     "api-keys": "Klucze API",
-    "api-version-not-found": "Versión de API no encontrada",
+    "api-version-not-found": "Nie znaleziono wersji API",
     "app-preferences": "Preferencje aplikacji",
     "applied-tax": "Impuesto aplicado",
     "apply": "Aplicar",
@@ -136,7 +136,7 @@
     "average": "Średnia",
     "average-cost": "Średnia cena",
     "average-purchase-price": "Średnia cena zakupu",
-    "back": "Volver",
+    "back": "Wstecz",
     "background-color": "Kolor tła",
     "background-overlay": "Kolor nakładki na tle",
     "badge": "Odznaka",
@@ -194,7 +194,7 @@
     "cant-create-folder": "No se puede crear la carpeta %folderName%.",
     "cant-create-subaccount-supplier": "Imposible crear la subcuenta para el proveedor %supplierCode%",
     "cant-delete-audit-log": "Nie można usunąć logu audytu",
-    "cant-delete-default-company": "No se puede eliminar la empresa predeterminada",
+    "cant-delete-default-company": "Nie można usunąć firmy domyślnej",
     "cant-delete-default-country": "Nie można usunąć domyślnego kraju",
     "cant-delete-default-currency": "Nie można usunąć waluty domyślnej",
     "cant-delete-default-payment-method": "Nie można usunąć domyślnej metody płatności",
@@ -202,7 +202,7 @@
     "cant-delete-default-tax": "Nie można usunąć domyślnego podatku",
     "cant-delete-default-warehouse": "No se puede eliminar el almacén por defecto",
     "cant-delete-last-user": "Nie można usunąć ostatniego użytkownika",
-    "cant-delete-variant-with-documents": "Nie można usunąć produktu lub wariantu %reference%, ponieważ został już kupiony lub sprzedany. Możesz go jednak zablokować, jeśli chcesz.",
+    "cant-delete-variant-with-documents": "Nie można usunąć produktu lub wariantu %reference%, ponieważ został już zakupiony lub sprzedany. Możesz go jednak zablokować, jeśli chcesz.",
     "cant-load-controller": "Nie można załadować kontrolera '%controllerName%'.",
     "cant-modify-reference": "Nie można zmodyfikować odniesienia.",
     "cant-remove-accounting-entry": "Nie można usunąć wpisu księgowego",
@@ -305,7 +305,7 @@
     "contracts": "Umowy",
     "control-panel": "Panel de control",
     "control-panel-decimal-warning": "Ostrzeżenie: ta zmiana zostanie zastosowana do cen produktów, ale także do całkowitych kwot na fakturach, księgach, etc.",
-    "controller": "Controlador",
+    "controller": "Kontroler",
     "controller-error": "Błąd kontrolera",
     "controller-not-found": "Kontroler nie znaleziony",
     "conversion-rate": "Tasa de conversión a €",
@@ -365,7 +365,7 @@
     "customer-reached-maximum-risk": "Klient osiągnął maksymalne ryzyko",
     "customer-subaccount-p": "Wskaź subkonto do użycia, lub pozostaw pole puste, aby przypisać automatycznie",
     "customers": "Klienci",
-    "customize": "Personalizar",
+    "customize": "Dostosować",
     "daily": "Diario",
     "dasboard-backup-li1": "Jeśli usuniesz lub odinstalujesz FacturaScripts, stracisz dane.",
     "dasboard-backup-li2": "Jeśli usuniesz lub odinstalujesz XAMPP, stracisz dane.",
@@ -472,7 +472,7 @@
     "document-report": "Informe de documentos",
     "document-sequence": "Sekwencja dokumentu",
     "document-sequences": "Secuencias de documentos",
-    "document-states": "Estados del documento",
+    "document-states": "Stany dokumentu",
     "document-type": "Tipo documento",
     "document-type-valid-length": "Nieprawidłowy typ dokumentu (musi mieć od 1 do 20 znaków).",
     "document-wildcard-info": "Documento indicado en la cabecera del asiento contable",
@@ -549,7 +549,7 @@
     "error-updating-product-stock": "Błąd podczas aktualizacji stanu magazynowego produktu!",
     "errors": "Błędy",
     "es_EC": "Español (Ecuador)",
-    "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
+    "es-tax-exception-e1": "Hiszpania: wyjątek na mocy artykułu 20 ustawy o VAT",
     "es-tax-exception-e2": "Hiszpania: wyjątek na mocy artykułu 21 ustawy o VAT",
     "es-tax-exception-e3": "España: excepción por el artículo 22 de la Ley del IVA",
     "es-tax-exception-e4": "Hiszpania: wyjątek na mocy artykułu 23 i 24 ustawy o VAT",
@@ -563,7 +563,7 @@
     "es-tax-regime-gold": "Régimen especial del oro de inversión",
     "es-tax-regime-group-entities": "Régimen especial del grupo de entidades",
     "es-tax-regime-simplified": "Régimen simplificado",
-    "es-tax-regime-surcharge": "Recargo de equivalencia",
+    "es-tax-regime-surcharge": "Dopłata równoważna",
     "es-tax-regime-telecom": "Regímenes especiales de telecomunicaciones, radiodifusión o televisión y otros",
     "es-tax-regime-travel": "Régimen especial de las agencias de viajes",
     "es-tax-regime-used-goods": "Régimen especial de los bienes usados, objetos de arte, antigüedades y objetos de colección",
@@ -579,7 +579,7 @@
     "exclude-valid": "Wyklucz poprawne",
     "exempt": "Exento",
     "exercise": "Ćwiczenie",
-    "exercise-date-out-range": "La fecha no está en el periodo del ejercicio.",
+    "exercise-date-out-range": "Data nie mieści się w okresie rocznym.",
     "exercise-date-range-exists": "Istnieje już ćwiczenie w tym przedziale dat (%start% - %end%)",
     "exercise-not-found": "Ćwiczenie nie znalezione.",
     "exercise-without-accounting-plan": "Ćwiczenie %exercise% nie ma jeszcze planu rachunkowego",
@@ -770,7 +770,7 @@
     "integrity-check": "Kontrola integralności",
     "integrity-check-help": "To jest sprawdzenie integralności systemu, opisane jako",
     "interest": "Interés",
-    "international-identifier": "Identificación internacional",
+    "international-identifier": "Identyfikator międzynarodowy",
     "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "Wprowadzony kod (%value%) jest nieprawidłowy. (%column%) powinien zawierać od %min% do %max% cyfr lub liter, bez spacji, akcentów ani innych znaków.",
     "invalid-column-lenght": "%column% ha de tener entre %min% y %max% caracteres.",
@@ -933,7 +933,7 @@
     "marked-as-homepage": "Marcada como página de inicio. Pulsa de nuevo para desmarcar.",
     "max-input-vars-warning": "Z aktualnym ustawieniem PHP (max_input_vars) nie będziesz mógł pracować z dokumentami większymi niż %numlines% linii.",
     "max-risk": "Maksymalne ryzyko",
-    "maximum-amount-with-cifnif": "Máximo importe con CIF\/NIF",
+    "maximum-amount-with-cifnif": "Maksymalna kwota z CIF\/NIF",
     "maximum-amount-without-cifnif": "Maksymalna kwota bez CIF\/NIF",
     "maximum-stock": "Stock máximo",
     "may": "Mayo",
@@ -1454,7 +1454,7 @@
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "Suma netto linii podatku musi wynosić: %lineNet%",
     "sum-total-line-tax-must-be": "Suma podatków od wszystkich wierszy powinna wynosić: %lineTotalTax%",
-    "summary": "Resumen",
+    "summary": "Podsumowanie",
     "sums-and-balances": "Sumy i salda",
     "sunday": "Niedziela",
     "supplied": "Suplido",
@@ -1472,7 +1472,7 @@
     "supplier-invoice-deleted-successfully": "Factura de compra %docCode% ha sido eliminada correctamente.",
     "supplier-invoices": "Faktury dostawców",
     "supplier-not-found": "Dostawca nie znaleziony",
-    "supplier-order": "Pedido de Proveedor",
+    "supplier-order": "Zamówienie od dostawcy",
     "supplier-orders": "Zamówienia od dostawców",
     "supplier-payment-concept": "Płatność dokumentu %document%",
     "supplier-products": "Productos del proveedor",
@@ -1515,13 +1515,13 @@
     "test-sendmail-not-implemented": "Test sterownika poczty sendmail nie jest zaimplementowany",
     "text-color": "Color de texto",
     "texts": "Textos",
-    "third-quarter": "3º trimestre",
+    "third-quarter": "3. kwartał",
     "third-trimester": "Trzeci kwartał",
     "this-last-fortnight": "Ostatnie 15 dni",
     "this-last-month": "Ostatnie 30 dni",
     "this-last-week": "Ostatnie 7 dni",
     "this-last-year": "Ostatnie 365 dni",
-    "this-month": "Este mes",
+    "this-month": "W tym miesiącu",
     "this-week": "Esta semana",
     "this-year": "Ten rok",
     "thousands-separator": "Separator tysięcy",
@@ -1650,7 +1650,7 @@
     "wildcard-general-info": "Zostanie zastąpiony odpowiednią wartością",
     "wildcard-title": "Zmienna zastępująca wartość",
     "without-closure": "Sin el cierre",
-    "without-domicile": "Sin domiciliar",
+    "without-domicile": "Bez zlecenia",
     "without-groups": "Bez grup",
     "without-regularization": "Sin regularización",
     "without-tax": "Sin IVA",
