Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1019,7 +1019,7 @@
     "no-gaps-found": "Keine Lücken gefunden",
     "no-invoice": "keine Rechnung",
     "no-outstanding-amount": "Kein ausstehender Betrag",
-    "no-print-permission": "No tiene permiso para imprimir o exportar",
+    "no-print-permission": "Sie haben keine Berechtigung zum Drucken oder Exportieren.",
     "no-reference": "Keine Referenz",
     "no-selected-item": "Keine Elemente ausgewählt",
     "no-stock": "Kein Bestand",
@@ -1064,7 +1064,7 @@
     "only-suspended": "Nur ausgesetzt",
     "open": "öffnen",
     "open-exercise": "Übung öffnen",
-    "open-tab": "Abrir en una nueva pestaña",
+    "open-tab": "In neuem Tab öffnen",
     "opened": "Geöffnet",
     "opening-acounting-completed": "Buchhaltungseröffnung abgeschlossen",
     "opening-operation": "Öffnung",
@@ -1100,7 +1100,7 @@
     "parent": "Elternteil",
     "parent-account": "Mutterkonto",
     "parent-family-cant-be-child": "Die Elternfamilie kann nicht mit dem Kind identisch sein.",
-    "parent-group": "Parent group",
+    "parent-group": "Elterngruppe",
     "parent-group-cant-be-the-same-group": "Die übergeordnete Gruppe kann nicht dieselbe Gruppe sein",
     "parent-group-loop": "Die übergeordnete Gruppe %parentGroup% verursacht eine zirkuläre Beziehung.",
     "partnumber": "Artikelnummer",
@@ -1251,7 +1251,7 @@
     "rectified-invoice": "Korrekturrechnung",
     "rectified-invoice-p": "Rechnungen sind Handelsdokumente und unterliegen bestimmten gesetzlichen Beschränkungen. Sie können nicht gelöscht oder geändert werden. Nur vollständige oder teilweise Rücksendungen sind möglich. Verwenden Sie dieses Formular, um eine Rücksendung für diese Rechnung zu erstellen.",
     "rectified-invoices": "Berichtigte Rechnungen",
-    "rectifying": "Rectificativa",
+    "rectifying": "Berichtigend",
     "rectifying-serie": "Korrekturserie",
     "redirect": "Weiterleitung",
     "reference": "Referenz",
@@ -1263,7 +1263,7 @@
     "refunds": "Rückerstattungen",
     "register": "Registrieren",
     "register-install-ad": "Die Installation von FacturaScripts registrieren",
-    "register-install-ad-p": "Wenn Sie die Installation von FacturaScripts registrieren, erhalten Sie einen Monat PRO-Sponsoring, mit dem Sie eines unserer exklusiven Plugins herunterladen können. Außerdem hilft es uns, Statistiken über Kern- und PHP-Versionen zu erstellen.",
+    "register-install-ad-p": "Wenn Sie die Installation von FacturaScripts registrieren, erhalten Sie einen Monat PRO-Sponsoring, mit dem Sie eines unserer exklusiven Plugins herunterladen können. Außerdem hilft es uns, Statistiken über die Versionen des Kern- und PHP-Systems zu erstellen.",
     "register-installation": "Instalation registrieren",
     "register-installation-p": "Registrieren Sie Ihre Installation, um kostenpflichtige oder private Plugins aktualisieren zu können.",
     "register-symbol": "#",
@@ -1367,7 +1367,7 @@
     "series": "Serie",
     "server": "Server:",
     "service": "Dienstleistung",
-    "services": "services",
+    "services": "Dienstleistungen",
     "settings": "Einstellungen",
     "settlement": "Abwicklung",
     "settlement-product": "Abrechnungsprodukt",
@@ -1398,7 +1398,7 @@
     "smaller-than": "Kleiner als",
     "soap-extension-not-installed": "Die SOAP-Erweiterung ist in PHP nicht aktiviert. Bitte wenden Sie sich an Ihren Hosting-Anbieter, um sie zu aktivieren.",
     "social-security-number": "Sozialversicherungsnummer",
-    "sort": "Order",
+    "sort": "Reihenfolge",
     "sort-by-column": "Nach Spalte sortieren",
     "sort-by-date-asc": "Nach Datum aufsteigend sortieren",
     "sort-by-date-desc": "Nach Datum absteigend sortieren",
@@ -1442,7 +1442,7 @@
     "subaccount-irpf": "Konto für Abzüge",
     "subaccount-irpf-creditor": "Unterkonto für Einkaufsabzüge",
     "subaccount-not-found": "Unterkonto 0 wurde nicht gefunden.",
-    "subaccount-purchases": "Account for purchases",
+    "subaccount-purchases": "Unterkonto für Einkäufe",
     "subaccount-pyg-not-found": "Teil-Konto für Gewinn- und Verlustrechnung nicht gefunden",
     "subaccount-sales": "Verkaufskonto",
     "subaccounts": "Unterkonten",
