--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -10,7 +10,7 @@
     "access-denied": "Dostęp zabroniony",
     "access-denied-p": "Nie masz uprawnień do przeglądania tych danych. Jeśli uważasz, że powinieneś mieć dostęp do tych danych, skontaktuj się z administratorem, aby przyznał Ci dostęp.",
     "account": "Cuenta",
-    "account-bad-parent": "La cuenta %codcuenta% tiene asociada una cuenta padre equivocada.",
+    "account-bad-parent": "Konto %codcuenta% jest powiązane z błędnym kontem nadrzędnym.",
     "account-balance": "Saldo konta",
     "account-code": "Código de cuenta",
     "account-code-bigger-than-subaccounts": "Kod konta %code% jest dłuższy niż subkonta",
@@ -21,7 +21,7 @@
     "account-length-error": "Longitud de subcuenta errónea. La subcuenta %code% debe tener la longitud definida en el ejercicio.",
     "account-missing-in-balance": "La cuenta %codcuenta% tiene saldo %saldo% pero no está incluida en los balances. Considere incluirla si el balance sale descuadrado.",
     "account-parent-error": "La cuenta padre es incorrecta o no pertenece al ejercicio",
-    "accounting": "Contabilidad",
+    "accounting": "Księgowość",
     "accounting-accounts": "Konta księgowe",
     "accounting-balance": "Saldo księgowe",
     "accounting-balances": "Balances",
@@ -49,14 +49,14 @@
     "actions": "Acciones",
     "active": "Activo",
     "actual-cost-price": "Rzeczywista cena zakupu",
-    "add": "Añadir",
+    "add": "Dodaj",
     "add-all-disabled": "Dodaj wszystko wyłączone",
     "add-all-enabled": "Dodaj wszystko włączone",
     "add-extra-lines": "Añadir líneas extra",
     "add-file": "Dodaj plik",
     "add-invoices": "Añadir facturas",
     "add-new-plugin": "Dodaj nową wtyczkę",
-    "additional-text": "Texto adicional",
+    "additional-text": "Tekst dodatkowy",
     "address": "Dirección",
     "addresses": "Direcciones",
     "addresses-and-contacts": "Adresy i kontakty",
@@ -97,7 +97,7 @@
     "apache-module-not-found": "Módulo de apache no encontrado: %module%",
     "apc-clear": "APC wyczyszczone.",
     "apc-delete-key-item": "Eliminado elemento '%item%' de APC.",
-    "apc-get-key-item": "Obtenido elemento '%item%' desde APC.",
+    "apc-get-key-item": "Pobrano element '%item%' z APC.",
     "apc-set-key-item": "Asignado elemento '%item%' a APC.",
     "api": "API",
     "api-disabled": "API wyłączone. Możesz je włączyć w preferencjach aplikacji.",
@@ -169,7 +169,7 @@
     "boxes": "Cajas",
     "browse": "Examinar",
     "business-name": "Razón Social",
-    "buy": "Comprar",
+    "buy": "Kupować",
     "cache": "Caché",
     "cache-dir": "Folder pamięci podręcznej '%folderName%'",
     "calculate": "Oblicz",
@@ -234,7 +234,7 @@
     "choose-files": "Seleccionar archivos",
     "choose-payment-method": "Elige forma de pago",
     "choose-serie": "Elige serie",
-    "choose-source": "Elegir el origen",
+    "choose-source": "Wybierz źródło",
     "cifnif": "CIF\/NIF",
     "cities": "Miasta",
     "city": "Miasto",
@@ -257,13 +257,13 @@
     "codiso": "Código ISO",
     "color": "Kolor",
     "color-danger": "Kolor niebezpieczeństwa",
-    "color-dark": "Color oscuridad",
+    "color-dark": "Kolor ciemny",
     "color-info": "Color info",
     "color-light": "Color luz",
     "color-primary": "Kolor podstawowy",
     "color-secondary": "Color secundario",
     "color-success": "Color éxito",
-    "color-warning": "Color advertencia",
+    "color-warning": "Kolor ostrzeżenia",
     "colors": "Colores",
     "column": "Kolumna",
     "columns": "Kolumny",
@@ -287,7 +287,7 @@
     "compatible": "Kompatybilny",
     "completed": "Zakończony",
     "component": "Komponent",
-    "concept": "Concepto",
+    "concept": "Koncepcja",
     "conditions": "Warunki",
     "configure-columns": "Konfigurator kolumn",
     "confirm": "Confirmar",
@@ -320,7 +320,7 @@
     "core-update-warning": "Advertencias de actualización",
     "correct": "Correcto",
     "cost": "Coste",
-    "cost-price": "Precio de coste",
+    "cost-price": "Cena kosztu",
     "cost-price-policy": "Política de precio de coste",
     "counterpart": "Contrapartida",
     "countries": "Kraje",
@@ -455,12 +455,12 @@
     "difference": "Różnica",
     "different-passwords": "Hasła nie pasują dla użytkownika %userNick%",
     "different-than": "Diferente que",
-    "disable": "Desactivar",
+    "disable": "Deaktywować",
     "disable-plugins": "Wyłącz wtyczki",
     "disabled": "Wyłączone",
     "disabled-plugins": "Wyłączone wtyczki",
     "discharge-date": "Data rozładowania: %date%",
-    "discount": "Descuento",
+    "discount": "Zniżka",
     "display": "Wyświetlanie",
     "display-date": "Data wyświetlania",
     "do-not-disable-plugins": "Nie dezaktywuj wtyczek",
@@ -529,7 +529,7 @@
     "end-date": "Data zakończenia",
     "end-time": "Czas zakończenia",
     "epigraph": "Epigraf",
-    "epigraph-group": "Grupo de Epígrafe",
+    "epigraph-group": "Grupa epigrafu",
     "epigraphs": "Epigrafy",
     "epigraphs-group": "Grupa Epigrafy",
     "equivalence": "Równoważność",
@@ -638,7 +638,7 @@
     "font": "Czcionka",
     "font-size": "Rozmiar czcionki",
     "footer": "Stopka",
-    "footer-text": "Texto pie de página",
+    "footer-text": "Tekst stopki",
     "for-admins": "Dla administratorów",
     "for-all": "Para todos",
     "for-all-exercises": "Dla wszystkich ćwiczeń",
@@ -717,7 +717,7 @@
     "hash": "Hash",
     "header": "Cabecera",
     "heading-account-group-id": "ID grupy kont",
-    "heading-account-id-root": "ID padre",
+    "heading-account-id-root": "ID rodzica",
     "health": "Salud",
     "height": "Alto",
     "hello": "Cześć",
@@ -773,10 +773,10 @@
     "international-identifier": "Identyfikator międzynarodowy",
     "intra-community": "Intracomunitaria",
     "invalid-alphanumeric-code": "Wprowadzony kod (%value%) jest nieprawidłowy. (%column%) powinien zawierać od %min% do %max% cyfr lub liter, bez spacji, akcentów ani innych znaków.",
-    "invalid-column-lenght": "%column% ha de tener entre %min% y %max% caracteres.",
+    "invalid-column-lenght": "%column% musi mieć od %min% do %max% znaków.",
     "invalid-date": "Data %date% jest nieprawidłowa.",
     "invalid-date-there-are-invoices-after": "Fecha no válida: %date%. La factura %other% es posterior y sin embargo tiene fecha anterior: %other-date%. Toda factura debe tener una fecha anterior o igual a la siguiente.",
-    "invalid-date-there-are-invoices-before": "Fecha no válida: %date%. La factura %other% es anterior a esta y sin embargo tiene fecha posterior: %other-date%. Toda factura debe tener una fecha anterior o igual a la siguiente.",
+    "invalid-date-there-are-invoices-before": "Nieprawidłowa data: %date%. Faktura %other% jest wcześniejsza, a mimo to ma późniejsze daty: %other-date%. Wszystkie faktury muszą mieć datę wcześniejszą lub równą następnej.",
     "invalid-iban": "Nieprawidłowy IBAN: %iban%",
     "invalid-iso-code": "Nieprawidłowy kod ISO '%iso-code%'",
     "invalid-number": "Nieprawidłowy numer: %number%",
@@ -901,7 +901,7 @@
     "login-text": "Escriba su nombre de usuario y contraseña para iniciar sesión",
     "login-to-continue": "Zaloguj się, aby kontynuować",
     "login-to-continue-p": "Musisz się zalogować, aby kontynuować tę akcję. Kliknij, aby się zalogować lub załóż konto.",
-    "login-user-not-found": "Usuario no encontrado: %nick%",
+    "login-user-not-found": "Nie znaleziono użytkownika: %nick%",
     "logo": "Logo",
     "logout": "Wyloguj się",
     "logout-ok": "Sesión cerrada correctamente.",
@@ -930,7 +930,7 @@
     "margin": "Margen",
     "margin-top": "Margines górny",
     "mark-as-homepage": "Oznacz jako stronę główną",
-    "marked-as-homepage": "Marcada como página de inicio. Pulsa de nuevo para desmarcar.",
+    "marked-as-homepage": "Oznaczone jako strona główna. Naciśnij ponownie, aby odznaczyć.",
     "max-input-vars-warning": "Z aktualnym ustawieniem PHP (max_input_vars) nie będziesz mógł pracować z dokumentami większymi niż %numlines% linii.",
     "max-risk": "Maksymalne ryzyko",
     "maximum-amount-with-cifnif": "Maksymalna kwota z CIF\/NIF",
@@ -960,7 +960,7 @@
     "missing-data-epigraph-group": "Brak danych w grupie epigrafów.",
     "missing-data-subaccount": "Brak danych w subkoncie.",
     "missing-epigraph-data": "Brak danych w epigrafie.",
-    "missing-file": "Falta el archivo",
+    "missing-file": "Brak pliku",
     "missing-file-help": "Parece que este archivo no se encuentra en tu instalación. Quizás no lo uses, pero <em>no puedes eliminarlo<\/em>.",
     "mobile": "Telefon komórkowy",
     "model": "Modelo",
@@ -1102,7 +1102,7 @@
     "parent-family-cant-be-child": "Rodzina nadrzędna nie może być taka sama jak dziecko.",
     "parent-group": "Grupa rodzicielska",
     "parent-group-cant-be-the-same-group": "Grupa rodzicielska nie może być tą samą grupą",
-    "parent-group-loop": "El Grupo Padre %parentGroup% está causando una relación circular.",
+    "parent-group-loop": "Grupa rodzic %parentGroup% powoduje cykle.",
     "partnumber": "Numer części",
     "passenger": "Pasażer",
     "password": "Hasło",
@@ -1191,7 +1191,7 @@
     "print-list-of-records": "Imprimir lista de registros",
     "print-price": "Drukuj ceny",
     "print-quantity": "Drukuj ilość",
-    "printed": "Impreso",
+    "printed": "Wydrukowane",
     "printing-format": "Format druku",
     "printing-formats": "Formaty druku",
     "priority": "Prioridad",
@@ -1229,7 +1229,7 @@
     "quantity-sold": "Cant. vendida",
     "randomizer-generating-more-items": "Generowanie dodatkowych elementów...",
     "rate": "Stawka",
-    "rates": "Tarifas",
+    "rates": "Stawki",
     "re": "RE",
     "re-open": "Ponownie otwórz",
     "react": "Reaccionar",
@@ -1247,7 +1247,7 @@
     "record-not-found": "Nie znaleziono rekordu",
     "record-save-error": "Wystąpił błąd podczas zapisywania danych",
     "record-updated-correctly": "Registro actualizado correctamente.",
-    "recreate-system-integrity": "Volver a crear la integridad del sistema",
+    "recreate-system-integrity": "Odtwórz integralność systemu",
     "rectified-invoice": "Factura rectificativa",
     "rectified-invoice-p": "Faktury to dokumenty handlowe i podlegają pewnym ograniczeniom prawny. Nie mogą zostać usunięte ani zmodyfikowane. Dozwolone są jedynie zwroty pełne lub częściowe. Skorzystaj z tego formularza, aby dokonać zwrotu tej faktury.",
     "rectified-invoices": "Faktury korygujące",
@@ -1268,10 +1268,10 @@
     "register-installation-p": "Registre su instalación para poder actualizar plugins de pago o privados.",
     "register-symbol": "#",
     "registered-installation": "Instalación registrada #%number%",
-    "registered-installation-p": "Esta instalación ya ha sido registrada. Si tienes plugins de pago, pulsa el botón administrar para vincularlos y poder actualizar.",
+    "registered-installation-p": "Ta instalacja została już zarejestrowana. Jeśli masz płatne wtyczki, naciśnij przycisk zarządzania, aby je powiązać i móc zaktualizować.",
     "regularization-operation": "Regulacja",
     "reject": "Odrzuć",
-    "rejected": "Rechazado",
+    "rejected": "Odrzucono",
     "related": "Powiązane",
     "related-subaccount-bank-charges": "Subcuenta relacionada para gastos bancarios (comisiones, etc)",
     "related-subaccount-purchases-sales": "Subcuenta relacionada para compras y ventas",
@@ -1370,7 +1370,7 @@
     "services": "Usługi",
     "settings": "Ustawienia",
     "settlement": "Rozliczenie",
-    "settlement-product": "Producto de liquidación",
+    "settlement-product": "Produkt rozliczeniowy",
     "settlements": "Rozliczenia",
     "setup-options": "Konfiguracja opcji",
     "shipping": "Wysyłka",
@@ -1429,7 +1429,7 @@
     "stock-transfer": "Transfer towarów",
     "stock-transfers": "Przeniesienia zapasów",
     "stockmax": "Max zapasów",
-    "stockmin": "Stock mín.",
+    "stockmin": "Minimalny stan magazynowy",
     "storage-limit-almost": "Niemal osiągnięto limit przechowywania (%limit%). Pozostało %free%",
     "storage-limit-reached": "Osiągnięto limit przechowywania",
     "stripe": "Stripe",
@@ -1488,7 +1488,7 @@
     "symbol": "Symbol",
     "table": "Tabela",
     "table-checked": "Tabla %tableName% comprobada.",
-    "table-not-found": "¡Tabla %tableName% no encontrada!",
+    "table-not-found": "Tabela %tableName% nie znaleziona!",
     "table-size": "Tamaño de la tabla",
     "tables": "Tablas",
     "task": "Zadanie",
@@ -1497,7 +1497,7 @@
     "tasks-component-title": "Zadania",
     "tasks-personal-title": "Zadania osobiste",
     "tax": "Impuesto",
-    "tax-area": "Zona de impuestos",
+    "tax-area": "Obszar podatkowy",
     "tax-areas": "Obszary podatkowe",
     "tax-base": "Podstawa opodatkowania",
     "tax-credit-account": "Cuenta de crédito para impuestos",
@@ -1525,7 +1525,7 @@
     "this-week": "Esta semana",
     "this-year": "Ten rok",
     "thousands-separator": "Separator tysięcy",
-    "thursday": "Jueves",
+    "thursday": "Czwartek",
     "ticket": "Bilet",
     "tickets": "Bilety",
     "time": "Hora",
@@ -1553,7 +1553,7 @@
     "transfer": "Transfer",
     "transfers": "Przesunięcia",
     "transfers-stock": "Transfery zapasów",
-    "translation": "Traducción",
+    "translation": "Tłumaczenie",
     "translations": "Tłumaczenia",
     "travel": "Viaje",
     "try-again-later": "Spróbuj ponownie później",
@@ -1636,13 +1636,13 @@
     "warehouse": "Almacén",
     "warehouse-cant-be-same": "Magazyn źródłowy i docelowy nie mogą być takie same.",
     "warehouse-must-be-same-business": "Los almacenes de origen y destino deben ser de la misma empresa",
-    "warehouses": "Almacenes",
+    "warehouses": "Magazyny",
     "warning": "Uwaga",
     "warnings": "Ostrzeżenia",
     "web": "Strona internetowa",
     "website": "Strona internetowa",
     "wednesday": "Środa",
-    "weeks": "Semanas",
+    "weeks": "Tygodnie",
     "weight": "Waga",
     "which-logs-store": "Jakie logi przechowywać",
     "width": "Ancho",
