--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -148,7 +148,7 @@
     "balance-sheets": "Balanços",
     "balances": "Balanços",
     "bank-account": "Conta Bancária",
-    "bank-accounts": "contas bancárias",
+    "bank-accounts": "Contas bancárias",
     "bank-mandate": "Mandato bancário",
     "bank-mandate-date": "Data do mandato",
     "banking-movements": "Movimentos bancários",
@@ -364,7 +364,7 @@
     "customer-payment-concept": "Pagamento do recibo %document%",
     "customer-reached-maximum-risk": "O cliente superou o risco m",
     "customer-subaccount-p": "Indique a subconta em uso ou deixe em branco para gerar automaticamente",
-    "customers": "clientes",
+    "customers": "Clientes",
     "customize": "Personalizar",
     "daily": "Diário",
     "dasboard-backup-li1": "Se excluir ou desinstalar o FacturaScripts, perderá os dados.",
@@ -778,7 +778,7 @@
     "invalid-date-there-are-invoices-after": "Data inválida: %date%. A fatura %other% é posterior e mesmo assim tem data anterior: %other-date%. Toda fatura deve ter data anterior ou igual à seguinte.",
     "invalid-date-there-are-invoices-before": "Data inválida: %date%. A fatura %other% é anterior a esta e no entanto tem data posterior: %other-date%. Toda a fatura deve ter uma data anterior ou igual à seguinte.",
     "invalid-iban": "i",
-    "invalid-iso-code": "Código ISO ''%iso-code% inválido",
+    "invalid-iso-code": "Código ISO '%iso-code%' inválido",
     "invalid-number": "Número não válido: %number%",
     "invalid-request": "Solicitação inválida",
     "invalid-user-can-permission": "Permissão inválida: %permission%. As permissões disponíveis são access, delete, export, import, update e only-owner-data.",
@@ -829,7 +829,7 @@
     "languages-cs_CZ": "Tcheco",
     "languages-de_DE": "Alemão",
     "languages-en_EN": "Inglês",
-    "languages-es_AR": "Español (Argentina)",
+    "languages-es_AR": "Espanhol (Argentina)",
     "languages-es_CL": "Espanhol (Chile)",
     "languages-es_CO": "Espanhol (Colômbia)",
     "languages-es_CR": "Espanhol (Costa Rica)",
@@ -1139,7 +1139,7 @@
     "phone2": "Telefone 2",
     "phones": "Telefones",
     "php-extension-needed": "É necessária a extensão %extension% na configuração do PHP",
-    "php-extension-not-found": "You don't have the %extension% PHP extension installed.",
+    "php-extension-not-found": "Você não tem a extensão %extension% do PHP instalada.",
     "php-support-end": "p",
     "physical-stock": "Estoque físico",
     "picking": "Separação",
@@ -1411,7 +1411,7 @@
     "special-account": "Conta especial",
     "special-accounting-entries": "special-accounting-entries",
     "special-accounts": "Contas especiais",
-    "specials-actions": "Specials Actions",
+    "specials-actions": "Ações especiais",
     "spreadsheet-xls": "Arquivo Excel",
     "standard": "Padrão",
     "start": "Inicio",
@@ -1434,7 +1434,7 @@
     "storage-limit-reached": "s",
     "stripe": "Stripe",
     "structured-data-csv": "Arquivo CSV",
-    "sub-account": "Sub conta",
+    "sub-account": "Subconta",
     "sub-type": "Subtipo",
     "subaccount": "Subconta",
     "subaccount-bad-codcuenta": "A",
