--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -164,7 +164,7 @@
     "blocked": "Bloqueado",
     "blocked-date": "Bloqueado em",
     "body": "Corpo",
-    "book": "Reserve",
+    "book": "Reservar",
     "box-closed-ok": "Caixa fechada corretamente",
     "boxes": "Caixas",
     "browse": "Navegar",
@@ -317,7 +317,7 @@
     "copy-p": "Preencha o formulário antes de fazer a cópia deste modelo",
     "copy-subaccounts": "Copiar plano de contas",
     "core-update": "Atualização do núcleo para a versão %version%",
-    "core-update-warning": "Advertencias de actualización",
+    "core-update-warning": "Avisos de atualização",
     "correct": "Correto",
     "cost": "Custo",
     "cost-price": "Preço de custo",
@@ -498,7 +498,7 @@
     "duplicated-request": "Pedido duplicado",
     "duration": "Duração",
     "edit": "Editar",
-    "editable": "Editable",
+    "editable": "Editável",
     "email": "O email",
     "email-bcc": "Cópia oculta do email",
     "email-cc": "Email com cópia",
@@ -746,7 +746,7 @@
     "images": "Imagens",
     "images-added-correctly": "%count% imagens adicionadas corretamente",
     "impacted-tax-re-subaccount": "Subconta de imposto exigido",
-    "impacted-tax-subaccount": "impacted-tax-subaccount",
+    "impacted-tax-subaccount": "Subconta de imposto repercutido",
     "import": "Importar",
     "import-accounting-plan": "Importar Plano de Contabilidade",
     "import-accounting-plan-p": "Deixe este campo em branco para usar o plano contabilístico padrão. Ou selecione um arquivo com seu plano contábil personalizado.",
@@ -780,7 +780,7 @@
     "invalid-iban": "i",
     "invalid-iso-code": "Código ISO ''%iso-code% no válido",
     "invalid-number": "Número não válido: %number%",
-    "invalid-request": "Petición no válida",
+    "invalid-request": "Pedido não válido",
     "invalid-user-can-permission": "Permissão inválida: %permission%. As permissões disponíveis são access, delete, export, import, update e only-owner-data.",
     "invalid-web": "E",
     "invoice": "Fatura",
@@ -829,7 +829,7 @@
     "languages-cs_CZ": "Checo",
     "languages-de_DE": "Alemão",
     "languages-en_EN": "Inglês",
-    "languages-es_AR": "Español (Argentina)",
+    "languages-es_AR": "Espanhol (Argentina)",
     "languages-es_CL": "Espanhol (Chile)",
     "languages-es_CO": "Espanhol (Colômbia)",
     "languages-es_CR": "Espanhol (Costa Rica)",
@@ -850,12 +850,12 @@
     "languages-pt_PT": "Português (Portugal)",
     "languages-va_ES": "Valenciano",
     "last-activity": "Ultima atividade",
-    "last-bimester": "last-bimester",
+    "last-bimester": "Último bimestre",
     "last-block": "Último bloco",
     "last-ip": "Último IP",
     "last-month": "O mês passado",
     "last-price-estimation": "Último preço de orçamento",
-    "last-price-sale": "Último precio de venta",
+    "last-price-sale": "Último preço de venda",
     "last-purchase-price": "último-preço-de-compra",
     "last-quarter": "Último trimestre",
     "last-semester": "Último semestre",
@@ -912,7 +912,7 @@
     "look-for-gaps": "Buscar huecos",
     "lot": "Muito",
     "low-security": "Baixa Segurança",
-    "machine": "machine",
+    "machine": "Máquina",
     "machines": "máquinas",
     "macro-account-note-info": "Códigos para substituição por valores",
     "mail-server-error": "Error al conectar al servidor de correio",
@@ -953,7 +953,7 @@
     "method-payment": "Método de pagamento",
     "mime-type": "Mime Type",
     "minimum-amount-with-cifnif": "Valor mínimo com CIF\/NIF",
-    "minimum-amount-without-cifnif": "Mínimo importe sin CIF\/NIF",
+    "minimum-amount-without-cifnif": "Importe mínimo sem CIF\/NIF",
     "minimum-stock": "Estoque mínimo",
     "minutes": "Minutos",
     "mismatched-accounting-entry": "Asiento contábil desajustado",
@@ -961,7 +961,7 @@
     "missing-data-subaccount": "Falta dados na subconta.",
     "missing-epigraph-data": "Os dados estão faltando na epígrafe.",
     "missing-file": "Falta o arquivo",
-    "missing-file-help": "This file seems to be missing from your installation. Maybe you don't use it, but <em>you can't remove it<\/em>.",
+    "missing-file-help": "Parece que este arquivo não está presente na sua instalação. Talvez você não o use, mas <em>não pode removê-lo<\/em>.",
     "mobile": "mobile",
     "model": "Modelo",
     "model-not-found": "Modelo não encontrado: %model%",
@@ -1001,7 +1001,7 @@
     "net": "Líquido",
     "new": "Novo",
     "new-acc-entry-line-p": "Pode introduzir uma linha escrevendo o código da subconta abaixo ou pressionando o botão subcontas e selecionando uma subconta.",
-    "new-address": "Nueva traducción",
+    "new-address": "Nova direção",
     "new-customer": "Novo Cliente",
     "new-customers": "Novos Clientes",
     "new-invoice-line-p": "Você pode adicionar um produto pressionando o botão produto ou digitando sua referência ou código de barras no campo código de barras. Ou pressione o botão linha para uma linha sem produto.",
@@ -1152,7 +1152,7 @@
     "plugin-file-too-big": "Este servidor não permite fazer upload de arquivos com mais de %size% MB. Por favor, aumente o tamanho máximo de upload de arquivos no PHP ou copie o arquivo para a pasta Plugins.",
     "plugin-installation-disabled": "plugin-installation-disabled",
     "plugin-installed": "Plugin instalado",
-    "plugin-need-update": "El plugin %plugin% necesitará actualización para funcionar con la nueva versión de FacturaScripts.",
+    "plugin-need-update": "O plugin %plugin% precisará de atualização para funcionar com a nova versão do FacturaScripts.",
     "plugin-need-update-but": "O plugin %plugin% ainda não tem uma atualização compatível.",
     "plugin-needed": "Plugin %pluginName% requerido.",
     "plugin-needs-fs-version": "p",
@@ -1172,7 +1172,7 @@
     "post-office-box": "Apartado",
     "postgresql": "PostgreSQL",
     "precio": "Prive",
-    "predefined-concepts": "Predefined Concepts",
+    "predefined-concepts": "Conceitos Predefinidos",
     "preferences": "Preferências",
     "preview": "preview",
     "previous": "Anterior",
@@ -1234,7 +1234,7 @@
     "re-open": "Reabrir",
     "react": "Reagir",
     "read-message-by": "Lido por %nick% em %date%",
-    "read-more": "Leer más",
+    "read-more": "Ler mais",
     "readonly": "Apenas leitura",
     "rebuild": "Reconstruir",
     "rebuild-completed": "Reconstrução concluída",
@@ -1281,7 +1281,7 @@
     "removing-logs-until": "Eliminando logs até %date%",
     "renew": "Renovar",
     "renumber": "Renumerar",
-    "renumber-accounting": "Renumber Accounting",
+    "renumber-accounting": "Renumeração de Lançamentos",
     "renumber-accounting-error": "Ocorreu um erro durante a renumeração das entradas contábeis no exercício fiscal %exerciseCode%",
     "renumber-accounting-ok": "Renumeración de lançamentos contabilísticos concluída",
     "renumber-accounting-p": "Renumerar lançamentos por data, de menor a maior",
@@ -1304,7 +1304,7 @@
     "respond": "Responder",
     "restore": "Restaurar",
     "restore-data": "Restaurar dados",
-    "result": "Result",
+    "result": "Resultado",
     "retention": "retenção",
     "retentions": "Retenções",
     "review-date": "Data de revisão",
@@ -1486,7 +1486,7 @@
     "suspended": "Suspenso",
     "swift": "Swift\/BIC",
     "symbol": "Símbolo",
-    "table": "table",
+    "table": "Tabela",
     "table-checked": "Tabela 0 verificada.",
     "table-not-found": "Tabela %tableName% não encontrada",
     "table-size": "Tamanho da Tabela",
